# midi-software-center

./: ..env.kate-swp  .analysis_results.txt.kate-swp  .database_schema_output.txt.kate-swp  .dockerignore  .env.example  .gitignore  .mcp.json  00_PHASE5_PACKAGE_SUMMARY.md  02_SETUP_MCP_CORRECT.sh  03_FULL_SETUP_ALL_SERVERS.sh  ANALYSIS_SUMMARY.md  APPSTATE_DOCUMENTATION_INDEX.md  ARCHITECTURE_DECISIONS_QA.md  ARCHITECTURE_REFERENCE.md  ARCHIVE_EXTRACTION_SUMMARY.md  ARCHIVE_IMPORT_FINDINGS.md  ARCHIVE_INTEGRATION_GUIDE.md  ASCII.txt  AUTO-TAGGER-TEST-ANALYSIS.md  AUTO-TAGGER-TEST-SUMMARY.md  CHANGELOG.md  CHANGELOG_AUTO_TAGGING_V2.md  CI_FAILURE_ANALYSIS.md  CLAUDE-CODE-SETUP.md  CLAUDE.md  COMPLETE_PACKAGE_SUMMARY.txt  COMPLETE_SYSTEM_OVERVIEW.md  COMPLETION_TASKS.md  COMPREHENSIVE-TAGGING-AND-ORGANIZATION-PLAN.md  CRITICAL-REQUIREMENTS-ADDENDUM.md  CRITICAL-TEST-AUDIT-SUMMARY.txt  Cargo.toml  DATABASE-ORGANIZATION-ANALYSIS.md  DAW_PARSER_INDEX.md  DEEPSEEK_22_FILES_GENERATION_GUIDE.md  DELIVERY_SUMMARY.md  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT-DAY-CHECKLIST.md  DEPLOYMENT-EXECUTIVE-SUMMARY.md  DEPLOYMENT-VERIFICATION-REPORT-2025-11-02.md  (+187 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/desktop/: midi-software-center.desktop
app/src-tauri/docs/checkpoints/: checkpoint_20251130_132832.md  checkpoint_20251212_014531.md  checkpoint_20251217_044800_day2_effect_chain.md  checkpoint_20251217_day3_monitoring_latency.md  checkpoint_20251217_day4_preset_system.md  checkpoint_20251217_day5_plugin_discovery.md
app/src-tauri/src/: automation.rs  command_palette.rs  lib.rs  main.rs  undo_redo.rs
app/src-tauri/src/browsers/: mod.rs  project_browser.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/core/: mod.rs
app/src-tauri/src/database/: batch_insert.rs  mod.rs  window_state.rs
app/src-tauri/src/daw/: effects.rs  mod.rs
app/src-tauri/src/daw_models/: analysis.rs  midi_file.rs  mod.rs  project.rs  search.rs  sequencer.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/editors/: controller.rs  piano_roll.rs
app/src-tauri/src/hardware/: device_manager.rs  midi_monitor.rs  mod.rs
app/src-tauri/src/io/: mod.rs
app/src-tauri/src/logging/: context.rs  events.rs  metrics.rs
app/src-tauri/src/midi_clock/: clock.rs  messages.rs  sync.rs  transport.rs
app/src-tauri/src/midi_io/: export.rs  link.rs  manager.rs  output.rs  output_manager.rs  playback.rs  thru.rs
app/src-tauri/src/notation/: mod.rs
app/src-tauri/src/profiling/: memory.rs  query_analyzer.rs  render_metrics.rs
app/src-tauri/src/scripting/: lua_runtime.rs
app/src-tauri/src/sequencer/: engine.rs  scheduler.rs  track.rs
app/src-tauri/src/services/: meilisearch_client.rs  mod.rs  vip3_analytics.rs  zeromq_broker.rs
app/src-tauri/src/settings/: keyboard.rs  library.rs  sync.rs
app/src-tauri/src/shared/: commands.rs  mod.rs
app/src-tauri/src/undo_redo/: core.rs  performance.rs  piano_roll.rs  serialization.rs  track.rs  velocity.rs
app/src-tauri/src/windows/: commands.rs  daw_state.rs  layout.rs  mod.rs  pipeline_state.rs  shortcuts.rs
app/src-tauri/tests/: test_duckdb_analytics.rs  test_filter_counts.rs  test_load_file_to_daw.rs  test_meilisearch_integration.rs
app/src-tauri/tests/integration/: full_workflow_test.rs
app/src-tauri/tests/templates/: automation_test.rs  collections_test.rs  filter_counts_test.rs  mixer_test.rs  project_test.rs
daw/src-tauri/: Cargo.toml  project_report_20251130_090327.json  project_report_20251130_090327.md  tauri.conf.json
daw/src-tauri/benches/: midi_latency.rs
daw/src-tauri/docs/checkpoints/: checkpoint_20251211_105032.md  checkpoint_20251212_210429.md  checkpoint_20251212_212658.md  checkpoint_20251213_004221.md
daw/src-tauri/migrations/: 20251111044328_initial_schema.sql
daw/src-tauri/src/: automation.rs  command_palette.rs  lib.rs  main.rs  undo_redo.rs
daw/src-tauri/src/browsers/: loop_browser.rs  mod.rs  project_browser.rs
daw/src-tauri/tests/: daw_database_integration_test.rs  export_test.rs  learn_test.rs  lib.rs  link_test.rs  midi_test.rs  models_test.rs  notation_test.rs  project_test.rs  search_test.rs  sequencer_test.rs
docs/: API.md  (+64 more)
pipeline/src-tauri/: ARENA-ALLOCATOR-SUMMARY.md  CONCURRENCY-MODULE-README.md  CONCURRENCY-QUICKSTART.md  Cargo.toml  Cargo_extraction_boost.toml  INTEGRATION_TESTS_SUMMARY.md  TESTING.md  build.rs  fix_repository.sh  models.sh  project_report_20251130_090328.json  project_report_20251130_090328.md  run_tests.sh  search.sh  tauri.conf.json
pipeline/src-tauri/.cargo/: config.toml
pipeline/src-tauri/src/: commands.rs.BACKUP  error.rs  lib.rs  main.rs
pipeline/src-tauri/tests/: analyze_test.rs  archive_import_test.rs  file_import_test.rs  file_import_test.rs.backup-1762260984  file_import_test.rs.pre-fix-backup  file_repository_test.rs  integration_test.rs  journey_test.rs  lib.rs  metadata_repository_test.rs  metadata_repository_test.rs.pre-fix-backup  search_repository_test.rs  split_file_test.rs  stress_test.rs  tag_repository_test.rs  test_helpers.rs  workflows_test.rs
rust_analyzer/: COMPARISON.md  Cargo.toml  FIX_INDEX.md  IMPLEMENTATION_DETAILS.md  INDEX.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TODO_FIXES_SUMMARY.md  analyzer.rs  ast_analysis.rs  autofix.rs  build.sh  cargo_integration.rs  cargo_plugin.rs  create_docs.sh  main.rs  midi_analysis.rs  output.rs  project_analysis.md  project_report_20251130_090333.json  project_report_20251130_090333.md  types.rs
scripts/test-midi-files/: Cargo.toml
scripts/test-midi-files/src/: main.rs
shared/rust/: Cargo.toml  project_report_20251130_090330.json  project_report_20251130_090330.md
shared/rust/src/: lib.rs
verification/: Cargo.toml
verification/sql/: schema_validation.sql
verification/src/: build.rs  config.rs  dependencies.rs  health.rs  integration.rs  lib.rs  main.rs  migrations.rs  paths.rs
verification/src/categories/: api_commands.rs  database_sync.rs  mod.rs  performance.rs  security.rs
verification/src/shared/: config.rs  mod.rs  types.rs
(+1734 files in other folders)
