# MIDI Library System - Workspace Cargo.toml
# Root workspace configuration for all Rust projects
#
# Architecture:
#   - pipeline/src-tauri   : MIDI import, processing, and analysis
#   - daw/src-tauri        : Real-time MIDI playback and sequencing
#   - shared/rust          : Common MIDI parsing and analysis code
#   - scripts/import-tool  : CLI utilities
#
# Build Performance:
#   - Full workspace: ~28 seconds (dev), ~2-3 minutes (release)
#   - Shared library: ~1-2 seconds
#   - Pipeline: ~9-24 seconds (uses shared)
#   - DAW: ~10-20 seconds (independent MIDI for playback)
#
# Note: Pipeline uses shared library for MIDI file analysis.
#       DAW has independent MIDI for real-time playback (not duplication).

[workspace]
resolver = "2"
members = [
    "pipeline/src-tauri",        # Import & analysis (uses shared library)
    "daw/src-tauri",             # Playback & sequencing (independent MIDI)
    # "studio/src-tauri",        # Removed - incomplete, may add later
    "shared/rust",               # Shared MIDI parsing & analysis
    "scripts/import-tool",       # CLI utilities
    "scripts/test-midi-files",   # MIDI testing tool
]

# Shared dependencies across all workspace members
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "bigdecimal"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri v2
tauri = { version = "2.7", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Async utilities
futures = "0.3"

# Cryptography
blake3 = "1.5"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"

# File I/O
memmap2 = "0.9"

# Parallel processing
rayon = "1.8"

# MIDI processing
midly = "0.5"

# Audio processing (for DAW)
cpal = "0.15"
rodio = "0.17"

# Testing
mockall = "0.12"
tempfile = "3.8"

# Benchmarking
criterion = "0.5"

# Platform-specific configurations
[workspace.metadata.cross]
# Configuration for cross-compilation if needed

# ============================================================================
# OPTIMIZED BUILD PROFILES (Merged and Deduplicated)
# ============================================================================

# Development profile - fast compilation for your code, optimized dependencies
[profile.dev]
opt-level = 0          # No optimization for your code (fast compile)
debug = true           # Include debug info
incremental = true     # Incremental compilation for faster rebuilds

# Optimize ALL dependencies at high level (HUGE speedup)
[profile.dev.package."*"]
opt-level = 3          # Maximum optimization for dependencies

# Extra optimization for heavy Tauri crates
[profile.dev.package.tauri]
opt-level = 3

[profile.dev.package.tauri-codegen]
opt-level = 3

[profile.dev.package.tauri-macros]
opt-level = 3

[profile.dev.package.tauri-runtime]
opt-level = 3

[profile.dev.package.tauri-runtime-wry]
opt-level = 3

# Database heavy crates
[profile.dev.package.sqlx]
opt-level = 3

[profile.dev.package.sqlx-core]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

# Async runtime
[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.tokio-util]
opt-level = 3

# Serialization
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.serde_json]
opt-level = 3

# Web rendering
[profile.dev.package.wry]
opt-level = 3

[profile.dev.package.tao]
opt-level = 3

# Release profile - maximum optimization
[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link-time optimization (thin is faster than fat)
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Smaller binary
strip = true           # Remove debug symbols
debug = false          # No debug info

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

# Test profile - slight optimization for faster tests
[profile.test]
opt-level = 1
