# MIDI Library System - Workspace Cargo.toml
# Root workspace configuration for all Rust projects
#
# Architecture:
#   - app/src-tauri        : Unified desktop app (Pipeline + DAW combined)
#   - scripts/import-tool  : CLI import utility
#   - scripts/test-midi-files : MIDI testing tool
#   - verification         : Verification test suite
#
# Build Performance:
#   - Full workspace: ~28 seconds (dev), ~2-3 minutes (release)
#   - App (unified): ~15-20 seconds (dev)
#
# The unified app combines:
#   - Pipeline: batch processing, import, analysis, database
#   - DAW: real-time playback, sequencer, MIDI I/O, mixer

[workspace]
resolver = "2"
members = [
    "app/src-tauri",             # Unified frontend app (Pipeline + DAW combined)
    "scripts/import-tool",       # CLI utilities
    "scripts/test-midi-files",   # MIDI testing tool
    "verification",              # Verification suite
]

# Shared dependencies across all workspace members
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "bigdecimal"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri v2 (matches CLI v2.8.4)
tauri = { version = "2.8", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.32", default-features = false, features = ["backtrace", "contexts", "panic", "tracing"] }

# Configuration
config = "0.13"
parking_lot = "0.12"        # Faster mutexes and RwLocks

# Platform-specific configurations
[workspace.metadata.cross]
# Configuration for cross-compilation if needed

# ============================================================================
# OPTIMIZED BUILD PROFILES (Merged and Deduplicated)
# ============================================================================

# Development profile - fast compilation for your code, optimized dependencies
[profile.dev]
opt-level = 0          # No optimization for your code (fast compile)
debug = true           # Include debug info
incremental = true     # Incremental compilation for faster rebuilds

# Optimize ALL dependencies at high level (HUGE speedup)
[profile.dev.package."*"]
opt-level = 3          # Maximum optimization for dependencies

# Extra optimization for heavy Tauri crates
[profile.dev.package.tauri]
opt-level = 3

# Database heavy crates
[profile.dev.package.sqlx]
opt-level = 3

# Async runtime
[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.tokio-util]
opt-level = 3

# Serialization
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.serde_json]
opt-level = 3

# Release profile - maximum optimization
[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link-time optimization (thin is faster than fat)
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Smaller binary
strip = true           # Remove debug symbols
debug = false          # No debug info

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

# Test profile - slight optimization for faster tests
[profile.test]
opt-level = 1
