[package]
name = "quantum-analyzer"
version = "1.0.0"
edition = "2021"
authors = ["MIDI Software Center"]
description = "Advanced Rust project analyzer with AST-level analysis and auto-fix capabilities"
license = "MIT"
repository = "https://github.com/midi-software-center/quantum-analyzer"

[[bin]]
name = "quantum-analyzer"
path = "src/main.rs"

[[bin]]
name = "cargo-quantum"
path = "src/cargo_plugin.rs"

[dependencies]
# Core functionality
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

# Cargo integration
cargo_metadata = "0.18"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client for AI integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# File handling
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Text processing
regex = "1.10"
lazy_static = "1.4"

# Path handling
pathdiff = "0.2"

# Graph algorithms for dependency analysis
petgraph = "0.6"

# Output formatting
tabled = "0.15"

# Date/time
chrono = "0.4"

# Environment
dirs = "5.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
