[package]
name = "midi-software-center"
version = "1.0.0"
edition = "2021"

[lib]
name = "midi_app"
path = "src/lib.rs"

[[bin]]
name = "midi-software-center"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "bigdecimal", "uuid", "rust_decimal"] }
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-error = "0.2"
sentry = { workspace = true }
sentry-tracing = "0.32"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
opener = { version = "0.7", features = ["reveal"] }
midi-pipeline = { path = "../../pipeline/src-tauri" }
midi-software-center-daw = { path = "../../daw/src-tauri" }

# MIDI parsing
midly = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID for database models
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal for precise numeric types (BPM, velocity, etc.)
rust_decimal = { version = "1.33", features = ["serde"] }

# Hex encoding for hash display
hex = "0.4"

# HTTP client for health checks
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Statics
lazy_static = "1.4"

[features]
default = ["database"]
database = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
rust_decimal_macros = "1.33"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
