# daw/src-tauri/Cargo.toml
[package]
name = "midi-software-center-daw"
version = "0.1.0"
description = "DAW Backend for MIDI Software Center"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
midly = "0.5"
sqlx = { workspace = true }
meilisearch-sdk = "0.24"
sysinfo = "0.30"
chrono = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
zip = "0.6"
futures-util = "0.3"
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dirs = "5.0"
bincode = "1.3"

# Shared library
midi-library-shared = { path = "../../shared/rust" }

# ============================================================================
# MIDI I/O - Optimized for Maximum Performance
# ============================================================================

# Cross-platform MIDI I/O (fallback, ~10-15ms latency)
midir = "0.10"

# Zero-allocation MIDI message parsing/encoding (real-time safe)
wmidi = "4.0"

# High-precision timing with hybrid spin-lock (critical for Windows)
nodi = { version = "1.0", features = ["hybrid-sleep"] }

# JACK backend for Linux/macOS - lowest latency (~3ms)
jack = { version = "0.11", optional = true }

# ALSA raw MIDI for Linux - direct kernel access (~5ms)
alsa = { version = "0.9", optional = true }

# CoreMIDI for macOS - native framework (~5ms)
coremidi = { version = "0.8", optional = true }

# Lock-free data structures for real-time audio
crossbeam = "0.8"
crossbeam-channel = "0.5"

# High-resolution timing
instant = "0.1"

# Spin-lock for sub-millisecond timing precision
spin_sleep = "1.2"
base64 = "0.22.1"

# ============================================================================
# COMPLETION FEATURES (Phase 17+)
# ============================================================================

# Lua scripting for macros and automation (vendored = bundled Lua, no system dep)
mlua = { version = "0.9", features = ["lua54", "async", "serialize", "vendored"] }

# Ableton Link sync (optional)
rusty_link = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific: prefer JACK or ALSA raw for best latency
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific: CoreMIDI integration
core-foundation = { version = "0.9", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific: WinMM via midir (already included)
winapi = { version = "0.3", features = ["mmsystem", "timeapi"], optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "midi_latency"
harness = false

[features]
# Default: cross-platform with midir
default = []

# Low-latency backends (choose based on platform)
jack-backend = ["jack"]
alsa-backend = ["alsa"]
coremidi-backend = ["coremidi", "core-foundation"]
windows-backend = ["winapi"]

# Enable all low-latency backends for current platform
low-latency = []

# Pro audio mode: JACK + ALSA on Linux, CoreMIDI on macOS
pro-audio-linux = ["jack-backend", "alsa-backend"]
pro-audio-macos = ["coremidi-backend"]
pro-audio-windows = ["windows-backend"]

# Ableton Link integration for DAW sync
link = ["dep:rusty_link"]

